# QtSfv

./: .gitignore  CMakeLists.txt  readme.txt
QtSfv/: appwindow.cpp  appwindow.h  debugdialog.cpp  debugdialog.h  main.cpp  settingsdialog.cpp  settingsdialog.h  sfvthread.cpp  sfvthread.h
QtSfv/crc32/: CRC.cpp  CRC.h
